--- a/TransporteSerieNacionalFX/bin/visual/Calendar.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/Calendar.fxml
@@ -1,104 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <?import com.jfoenix.controls.JFXTabPane?>
-<AnchorPane prefHeight="632.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CalendarController">
-    <children>
-        <Label layoutX="498.0" layoutY="15.0" text="Calendario" textFill="#2f2484">
-            <font>
-                <Font name="Segoe UI Symbol" size="36.0" />
-            </font>
-        </Label>
-       <JFXTabPane fx:id="calendarTabPane" layoutX="14.0" layoutY="88.0" prefHeight="471.0" prefWidth="1120.0" />
+<AnchorPane prefHeight="632.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CalendarController">
+    <Label layoutX="498.0" layoutY="15.0" text="Calendario" textFill="#2f2484">
+        <font>
+            <Font name="Segoe UI Symbol" size="36.0"/>
+        </font>
+    </Label>
+    <JFXTabPane fx:id="calendarTabPane" layoutX="14.0" layoutY="88.0" prefHeight="471.0" prefWidth="1120.0"/>
+    <GridPane layoutX="180.0" layoutY="553.0" prefHeight="65.0" prefWidth="859.0">
+        <columnConstraints>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0"
+                               prefWidth="253.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="364.0" minWidth="10.0"
+                               prefWidth="327.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="287.0" minWidth="10.0"
+                               prefWidth="272.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <children>
+            <JFXButton fx:id="statisticsBtn" onAction="#showStatistics" prefHeight="54.0" prefWidth="259.0"
+                       stylesheets="@../styles/PrincipalMenu.css" text="Mostrar estadísticas">
+                <font>
+                    <Font name="Segoe UI Emoji" size="20.0"/>
+                </font>
+                <graphic>
+                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@../resources/bar_chart.png"/>
+                        </image>
+                    </ImageView>
+                </graphic>
+                <cursor>
+                    <Cursor fx:constant="HAND"/>
+                </cursor>
+            </JFXButton>
+            <JFXButton fx:id="configurationBtn" onAction="#showConfiguration" prefHeight="54.0" prefWidth="259.0"
+                       stylesheets="@../styles/PrincipalMenu.css" text="Configurar cambios" GridPane.columnIndex="1">
+                <font>
+                    <Font name="Segoe UI Emoji" size="20.0"/>
+                </font>
+                <graphic>
+                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@../resources/switch.png"/>
+                        </image>
+                    </ImageView>
+                </graphic>
+                <cursor>
+                    <Cursor fx:constant="HAND"/>
+                </cursor>
+            </JFXButton>
 
-        <!--<JFXButton fx:id="saveExcel" buttonType="RAISED" layoutX="302.0" layoutY="565.0"  ripplerFill="#f8f6f6" stylesheets="@../styles/PrincipalMenu.css" text="Exportar Calendario" textFill="WHITE">
-            <cursor>
-                <Cursor fx:constant="HAND" />
-            </cursor>
-         <font>
-            <Font size="24.0" />
-         </font>
-        </JFXButton>-->
-      <!--<Label layoutX="634.0" layoutY="68.0" text="Estadísticas" textFill="#2f2484">
-         <font>
-            <Font name="Segoe UI Symbol" size="28.0" />
-         </font>
-      </Label>
-      <Separator layoutX="778.0" layoutY="90.0" prefHeight="3.0" prefWidth="360.0" />
-      <Separator layoutX="627.0" layoutY="94.0" orientation="VERTICAL" prefHeight="471.0" prefWidth="12.0" />
-      <Separator layoutX="1136.0" layoutY="88.0" orientation="VERTICAL" prefHeight="471.0" prefWidth="12.0" />
-      <Separator layoutX="626.0" layoutY="558.0" prefHeight="3.0" prefWidth="513.0" />
-      <AnchorPane layoutX="631.0" layoutY="88.0" prefHeight="471.0" prefWidth="503.0">
-         <children>
-            <Label layoutX="14.0" layoutY="26.0" text="Total de km del calendario:" textFill="#2f2484">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblCalendarKM" layoutX="266.0" layoutY="26.0" text="n" textFill="#2f2484">
-               <font>
-                  <Font name="Segoe UI Symbol" size="20.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="107.0" text="Equipo con más KM recorridos:" textFill="#2f2484">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblMoreKMTeam" layoutX="295.0" layoutY="107.0" text="n" textFill="#2f2484">
-               <font>
-                  <Font name="Segoe UI Symbol" size="20.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="189.0" text="Equipo con menos KM recorridos:" textFill="#2f2484">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblLessKMTeam" layoutX="320.0" layoutY="189.0" text="n" textFill="#2f2484">
-               <font>
-                  <Font name="Segoe UI Symbol" size="20.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="279.0" text="Cantidad de KM del viaje más corto:" textFill="#2f2484">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblLessKM" layoutX="341.0" layoutY="279.0" text="n" textFill="#2f2484">
-               <font>
-                  <Font name="Segoe UI Symbol" size="20.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="367.0" text="Cantidad de KM del viaje más largo:" textFill="#2f2484">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblMoreKM" layoutX="341.0" layoutY="367.0" text="n" textFill="#2f2484">
-               <font>
-                  <Font name="Segoe UI Symbol" size="20.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>-
-     <JFXButton fx:id="configMutations" buttonType="RAISED" layoutX="601.0" layoutY="565.0" ripplerFill="#f8f6f6" stylesheets="@../styles/PrincipalMenu.css" text="Configurar Calendario" textFill="WHITE">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="24.0" />
-         </font>
-      </JFXButton>
-      <JFXButton fx:id="btnStatistics" layoutX="938.0" layoutY="575.0"  stylesheets="@../styles/PrincipalMenu.css" text="Estadisticas" textFill="WHITE" />-->
-      <JFXButton fx:id="popupBtn" layoutX="943.0" layoutY="568.0" prefHeight="43.0" prefWidth="138.0" stylesheets="@../styles/PrincipalMenu.css" text="Opciones">
-         <font>
-            <Font name="Segoe UI Emoji" size="20.0" />
-         </font></JFXButton>
 
-    </children>
+
+            <JFXButton fx:id="exportBtn" onAction="#exportCalendar" prefHeight="54.0" prefWidth="259.0"
+                       stylesheets="@../styles/PrincipalMenu.css" text="Exportar calendario " GridPane.columnIndex="2">
+                <font>
+                    <Font name="Segoe UI Emoji" size="20.0"/>
+                </font>
+                <graphic>
+                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@../resources/exportar.png"/>
+                        </image>
+                    </ImageView>
+                </graphic>
+                <cursor>
+                    <Cursor fx:constant="HAND"/>
+                </cursor>
+            </JFXButton>
+        </children>
+    </GridPane>
+
 </AnchorPane>
