--- a/TransporteSerieNacionalFX/src/visual/Home.fxml
+++ b/TransporteSerieNacionalFX/src/visual/Home.fxml
@@ -8,6 +8,9 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="1920.0" maxWidth="1920.0" minHeight="678.0" minWidth="829.0" prefHeight="768.0" prefWidth="1360.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
@@ -46,80 +49,112 @@
             </Label>
         </children>
     </AnchorPane>
-    <AnchorPane layoutX="-3.0" layoutY="137.0" prefHeight="649.0" prefWidth="213.0" style="-fx-background-color: #2F2484; -fx-background-radius: 0 70 0 0;">
+    <AnchorPane layoutX="-3.0" layoutY="137.0" prefHeight="657.0" prefWidth="213.0" style="-fx-background-color: #2F2484; -fx-background-radius: 0 70 0 0;">
         <children>
-          <JFXButton fx:id="buttonImportCalendar" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="6.0" layoutX="30.0" layoutY="190.0" lineSpacing="10.0" onAction="#importCalendar" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Importar" textAlignment="RIGHT" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
-              <font>
-                  <Font name="Segoe UI Symbol" size="16.0" />
-              </font>
-              <cursor>
-                  <Cursor fx:constant="HAND" />
-              </cursor>
-              <graphic>
-                  <ImageView fitHeight="62.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
-                      <image>
-                          <Image url="@../resources/importar.png" />
-                      </image>
-                  </ImageView>
-              </graphic>
-              <tooltip>
-                  <Tooltip text="Permite importar un calendario desde un fichero Excel y modificarlo" />
-              </tooltip>
-          </JFXButton>
-          <JFXButton fx:id="buttonInfromation" buttonType="RAISED" graphicTextGap="20.0" layoutX="30.0" layoutY="373.0" onAction="#showInformation" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Ayuda" textAlignment="RIGHT" textFill="WHITE" wrapText="true" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
-              <font>
-                  <Font name="Segoe UI Symbol" size="16.0" />
-              </font>
-              <cursor>
-                  <Cursor fx:constant="HAND" />
-              </cursor>
-              <graphic>
-                  <ImageView fitHeight="43.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
-                      <image>
-                          <Image url="@../resources/baseball.png" />
-                      </image>
-                  </ImageView>
-              </graphic>
-              <tooltip>
-                  <Tooltip text="Información sobre la aplicación" />
-              </tooltip>
-          </JFXButton>
-            <JFXButton fx:id="buttonTeam" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="15.0" layoutX="30.0" layoutY="283.0" onAction="#showTeams" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Equipos" textAlignment="RIGHT" textFill="WHITE" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
-                <font>
-                    <Font name="Segoe UI Symbol" size="16.0" />
-                </font>
-                <cursor>
-                    <Cursor fx:constant="HAND" />
-                </cursor>
-                <graphic>
-                    <ImageView fitHeight="43.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+         <GridPane layoutX="7.0" layoutY="67.0" prefHeight="500.0" prefWidth="200.0">
+           <columnConstraints>
+             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+           </columnConstraints>
+           <rowConstraints>
+               <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+                <JFXButton fx:id="buttonImportCalendar" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="6.0" lineSpacing="10.0" onAction="#importCalendar" prefHeight="66.0" prefWidth="166.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Importar" textAlignment="RIGHT" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" GridPane.rowIndex="1">
+                    <font>
+                        <Font name="Segoe UI Symbol" size="16.0" />
+                    </font>
+                    <cursor>
+                        <Cursor fx:constant="HAND" />
+                    </cursor>
+                    <graphic>
+                        <ImageView fitHeight="62.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../resources/importar.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <tooltip>
+                        <Tooltip text="Permite importar un calendario desde un fichero Excel y modificarlo" />
+                    </tooltip>
+                </JFXButton>
+                  <JFXButton fx:id="buttonCalendar" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="5.0" onAction="#showCalendar" prefHeight="66.0" prefWidth="165.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Calendario" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
+                      <font>
+                          <Font name="Segoe UI Symbol" size="16.0" />
+                      </font>
+                      <graphic>
+                          <ImageView fitHeight="43.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                  <Image url="@../resources/calendario.png" />
+                              </image>
+                          </ImageView>
+                      </graphic>
+                      <cursor>
+                          <Cursor fx:constant="HAND" />
+                      </cursor>
+                      <tooltip>
+                          <Tooltip text="Calendario generado para el torneo" />
+                      </tooltip>
+                  </JFXButton>
+               <JFXButton fx:id="dataBtn" buttonType="RAISED" graphicTextGap="20.0" onAction="#showData" prefHeight="66.0" prefWidth="167.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Datos" textAlignment="RIGHT" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                  <font>
+                     <Font name="Segoe UI Symbol" size="16.0" />
+                  </font>
+                  <cursor>
+                     <Cursor fx:constant="HAND" />
+                  </cursor>
+                  <graphic>
+                     <ImageView fitHeight="43.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@../resources/stadium.png" />
+                           <Image url="@../resources/data.png" />
                         </image>
-                    </ImageView>
-                </graphic>
-                <tooltip>
-                    <Tooltip text="Listado de los equipos participantes en el torneo" />
-                </tooltip>
-            </JFXButton>
-            <JFXButton fx:id="buttonCalendar" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="5.0" layoutX="30.0" layoutY="101.0" onAction="#showCalendar" prefHeight="66.0" prefWidth="150.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Calendario" textAlignment="RIGHT" textFill="WHITE" wrapText="true" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
-                <font>
-                    <Font name="Segoe UI Symbol" size="16.0" />
-                </font>
-                <graphic>
-                    <ImageView fitHeight="43.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="@../resources/calendario.png" />
-                        </image>
-                    </ImageView>
-                </graphic>
-                <cursor>
-                    <Cursor fx:constant="HAND" />
-                </cursor>
-                <tooltip>
-                    <Tooltip text="Calendario generado para el torneo" />
-                </tooltip>
-            </JFXButton>
+                     </ImageView>
+                  </graphic>
+                  <tooltip>
+                     <Tooltip text="Información sobre la aplicación" />
+                  </tooltip>
+               </JFXButton>
+                  <JFXButton fx:id="buttonTeam" alignment="CENTER_RIGHT" buttonType="RAISED" graphicTextGap="15.0" onAction="#showTeams" prefHeight="66.0" prefWidth="166.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Equipos" textAlignment="RIGHT" textFill="WHITE" GridPane.rowIndex="2">
+                      <font>
+                          <Font name="Segoe UI Symbol" size="16.0" />
+                      </font>
+                      <cursor>
+                          <Cursor fx:constant="HAND" />
+                      </cursor>
+                      <graphic>
+                          <ImageView fitHeight="43.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                  <Image url="@../resources/stadium.png" />
+                              </image>
+                          </ImageView>
+                      </graphic>
+                      <tooltip>
+                          <Tooltip text="Listado de los equipos participantes en el torneo" />
+                      </tooltip>
+                  </JFXButton>
+                <JFXButton fx:id="buttonInfromation" buttonType="RAISED" graphicTextGap="20.0" onAction="#showInformation" prefHeight="66.0" prefWidth="166.0" ripplerFill="WHITE" stylesheets="@../styles/PrincipalMenu.css" text="Ayuda" textAlignment="RIGHT" textFill="WHITE" wrapText="true" GridPane.rowIndex="4">
+                    <font>
+                        <Font name="Segoe UI Symbol" size="16.0" />
+                    </font>
+                    <cursor>
+                        <Cursor fx:constant="HAND" />
+                    </cursor>
+                    <graphic>
+                        <ImageView fitHeight="43.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../resources/baseball.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <tooltip>
+                        <Tooltip text="Información sobre la aplicación" />
+                    </tooltip>
+                </JFXButton>
+            </children>
+         </GridPane>
         </children>
     </AnchorPane>
 </AnchorPane>
